utilisation de la balise picture

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
   </head>
   <body>
     <div id="top" class="container-fluid">
+        <picture>
+          <source srcset="images/poster.jpg" media="(min-width: 768px)"/>
+          <img class="img-fluid" src="images/top@sm.jpg" alt="top image"/>
+        </picture>
         <!-- <img class="img-fluid" src="images/poster.jpg" />
         <video id="my-video" class="video-js vjs-default-skin vjs-16-9" controls preload="auto"
             poster="images/poster.jpg" data-setup="{'fluid': true}">
@@ -65,8 +69,8 @@
             <div class="salle col-8 offset-1">LE CADRAN</div>
         </div>
     </div>
-    <div class="container-fluid bottom">
-<!--        <img class="img-fluid" src="images/bottom@sm.jpg" />-->
+    <div id="down" class="container-fluid bottom">
+        <img class="img-fluid" src="images/bottom@sm.jpg" />
         <div class="artiste col-12">AGATHE BONIN</div>
     </div>
     <!-- VideoJs Javascript -->
