--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <img class="img-fluid" src="images/top@sm.jpg" alt="top image"/>
         </picture>
         <div class="col-12 img-center">
-            <img src="images/iconmonstr-video-15.png" alt="bouton play" />
+            <img class="col-2 playbtn" src="images/iconmonstr-video-15.svg" alt="bouton play" />
         </div>
         
    
@@ -79,10 +79,10 @@
         <div class="infosartiste col-12">
             <div class="artiste col-12">AGATHE BONIN</div>
             <div class="row icones container-fluid">
-                <div class="col-2 offset-2"><img  src="images/youtube.png" alt="bouton youtube" /></div>
-                <div class="col-2 "><img  src="images/facebook.png" alt="bouton facebook" /></div>
-                <div class="col-2 "><img  src="images/instagram.png" alt="bouton instagram" /></div>
-                <div class="col-2 "><img  src="images/soundcloud.png" alt="bouton soundcloud" /></div>
+                <div class="col-2 offset-2"><img class="reseaux"  src="images/youtube.svg" alt="bouton youtube" /></div>
+                <div class="col-2 "><img  class="reseaux" src="images/facebook.svg" alt="bouton facebook" /></div>
+                <div class="col-2 "><img  class="reseaux" src="images/instagram.svg" alt="bouton instagram" /></div>
+                <div class="col-2 "><img  class="reseaux" src="images/soundcloud.svg" alt="bouton soundcloud" /></div>
             </div>
         </div>
         
