changements Css et layout

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <img class="img-fluid" src="images/top@sm.jpg" alt="top image"/>
         </picture>
         <div class="col-12 img-center">
-            <img class="col-2 playbtn" src="images/iconmonstr-video-15.svg" alt="bouton play" />
+            <img class="col-3 playbtn" src="images/iconmonstr-video-15.svg" alt="bouton play" />
         </div>
         
    
@@ -50,28 +50,28 @@
     </div>
     <div class="container-fluid concert">
         <div class="row concert justify-content-between">
-            <div class="date col-3">14 NOV</div>
-            <div class="lien_achat col-9"><a class="sousligne">BUY TICKET</a></div>
-            <div class="ville col-8 offset-1">EVREUX</div>        
-            <div class="salle col-8 offset-1">LE CADRAN</div>
+            <div class="date col-5">14 NOV</div>
+            <div class="lien_achat col-7"><a class="sousligne">RÉSERVER</a></div>
+            <div class="ville col-9 offset-1">EVREUX</div>        
+            <div class="salle col-9 offset-1">LE CADRAN</div>
         </div>
         <div class="row concert justify-content-between">
-            <div class="date col-3">14 NOV</div>
-            <div class="lien_achat col-9"><a class="sousligne">BUY TICKET</a></div>
-            <div class="ville col-8 offset-1">EVREUX</div>        
-            <div class="salle col-8 offset-1">LE CADRAN</div>
+            <div class="date col-5">16 NOV</div>
+            <div class="lien_achat col-7"><a class="sousligne">RÉSERVER</a></div>
+            <div class="ville col-9 offset-1">YERRES</div>        
+            <div class="salle col-9 offset-1">CEC DE YERRES</div>
         </div>
         <div class="row concert justify-content-between">
-            <div class="date col-3">14 NOV</div>
-            <div class="lien_achat col-9"><a class="sousligne">BUY TICKET</a></div>
-            <div class="ville col-8 offset-1">EVREUX</div>        
-            <div class="salle col-8 offset-1">LE CADRAN</div>
+            <div class="date col-5">23 NOV</div>
+            <div class="lien_achat col-7"><a class="sousligne">RÉSERVER</a></div>
+            <div class="ville col-9 offset-1">LUDRES</div>        
+            <div class="salle col-9 offset-1">ESPACE CHAUDEAU</div>
         </div>
         <div class="row concert justify-content-between">
-            <div class="date col-3">14 NOV</div>
-            <div class="lien_achat col-9"><a class="sousligne">BUY TICKET</a></div>
-            <div class="ville col-8 offset-1">EVREUX</div>        
-            <div class="salle col-8 offset-1">LE CADRAN</div>
+            <div class="date col-5">02 DEC</div>
+            <div class="lien_achat col-7"><a class="sousligne">RÉSERVER</a></div>
+            <div class="ville col-9 offset-1">PARIS</div>        
+            <div class="salle col-9 offset-1">SALLE PLEYEL</div>
         </div>
     </div>
     <div id="down" class="container-fluid bottom">
