--- a/index.html
+++ b/index.html
@@ -50,28 +50,28 @@
     </div>
     <div class="container-fluid concert">
         <div class="row concert justify-content-between">
-            <div class="date col-5">14 NOV</div>
+            <div class="date col-5 align-middle">14 NOV</div>
             <div class="lien_achat col-7"><a class="sousligne">RÉSERVER</a></div>
-            <div class="ville col-9 offset-1">EVREUX</div>        
-            <div class="salle col-9 offset-1">LE CADRAN</div>
+            <div class="ville col-11 offset-1">EVREUX</div>        
+            <div class="salle col-11 offset-1">LE CADRAN</div>
         </div>
         <div class="row concert justify-content-between">
             <div class="date col-5">16 NOV</div>
             <div class="lien_achat col-7"><a class="sousligne">RÉSERVER</a></div>
-            <div class="ville col-9 offset-1">YERRES</div>        
-            <div class="salle col-9 offset-1">CEC DE YERRES</div>
+            <div class="ville col-11 offset-1">YERRES</div>        
+            <div class="salle col-11 offset-1">CEC DE YERRES</div>
         </div>
         <div class="row concert justify-content-between">
             <div class="date col-5">23 NOV</div>
             <div class="lien_achat col-7"><a class="sousligne">RÉSERVER</a></div>
-            <div class="ville col-9 offset-1">LUDRES</div>        
-            <div class="salle col-9 offset-1">ESPACE CHAUDEAU</div>
+            <div class="ville col-11 offset-1">LUDRES</div>        
+            <div class="salle col-11 offset-1">ESPACE CHAUDEAU</div>
         </div>
         <div class="row concert justify-content-between">
             <div class="date col-5">02 DEC</div>
             <div class="lien_achat col-7"><a class="sousligne">RÉSERVER</a></div>
-            <div class="ville col-9 offset-1">PARIS</div>        
-            <div class="salle col-9 offset-1">SALLE PLEYEL</div>
+            <div class="ville col-11 offset-1">PARIS</div>        
+            <div class="salle col-11 offset-1">SALLE PLEYEL</div>
         </div>
     </div>
     <div id="down" class="container-fluid bottom">
