--- a/index.html
+++ b/index.html
@@ -41,12 +41,6 @@
     </div>
     <div class="container-fluid concert">        
         <div class="row concert justify-content-between">
-            <div class="date col-5 col-md-3">23 NOV</div>
-            <div class="lien_achat col-7"><a class="sousligne" href="https://www.infoconcert.com/artiste/agathe-bonin-172659/concerts.html">RÉSERVER</a></div>
-            <div class="ville col-11 offset-1">LUDRES</div>        
-            <div class="salle col-11 offset-1">ESPACE CHAUDEAU</div>
-        </div>
-        <div class="row concert justify-content-between">
             <div class="date col-5 col-md-3">02 DEC</div>
             <div class="lien_achat col-7"><a class="sousligne" href="https://www.infoconcert.com/artiste/agathe-bonin-172659/concerts.html">RÉSERVER</a></div>
             <div class="ville col-11 offset-1">PARIS</div>        
@@ -69,7 +63,7 @@
             <div class="artiste col-12">AGATHE BONIN</div>
             <div class="row icones container-fluid">
                 <div class="col-2 offset-2"><a href="https://www.youtube.com/user/TheAgathe2712"><img class="reseaux"  src="images/youtube.svg" alt="bouton youtube" /></a></div>
-                <div class="col-2 "><a href="https://www.facebook.com/profile.php?id=100003014246115"><img  class="reseaux" src="images/facebook.svg" alt="bouton facebook" /></a></div>
+                <div class="col-2 "><a href="https://www.facebook.com/agathecompteofficiel"><img  class="reseaux" src="images/facebook.svg" alt="bouton facebook" /></a></div>
                 <div class="col-2 "><a href="https://instagram.com/agathebonin?utm_source=ig_profile_share&igshid=1ergzmhozorrh"><img  class="reseaux" src="images/instagram.svg" alt="bouton instagram" /></a></div>
                 <div class="col-2 "><a href="https://open.spotify.com/artist/5VeGbzvQcEpiDLuS2vAPvd"><img  class="reseaux" src="images/spotify.svg" alt="bouton soundcloud" /></a></div>
             </div>
